<resources>
    <string name="app_name">MySqlDbDemo</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_tracking">tracking</string>
    <string name="track">track</string>
    <string name="trackingNumber">trackingNumber</string>
    <string name="title_activity_tracking_page">trackingPage</string>
    <string name="trackButton">trackButton</string>
    <string name="trackingnumber">trackingnumber</string>
    <string name="trackingNumber1">tracking number</string>
    <string name="title_activity_display_page">displayPage</string>
    <string name="title_activity_details">Details</string>
    <string name="hellouser" />
    <string name="HelloUser">HelloUser</string>
    <string name="ViewAppliance">ViewAppliance</string>
    <string name="ManageAppliance">ManageAppliance</string>
    <string name="title_activity_view_appliance">ViewAppliance</string>
    <string name="ManageSchedule">ManageSchedule</string>
    <string name="ViewSchedule">ViewSchedule</string>
    <string name="powerconsumption">powerconsumption</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="title_activity_manage_appliance">ManageAppliance</string>
    <string name="appliance">appliance</string>
    <string name="powerConsumed">powerConsumed</string>
    <string name="StartTime">StartTime</string>
    <string name="EndTime">EndTime</string>
    <string name="Add">Add</string>
    <string name="UpdateAppliance">UpdateAppliance</string>
    <string name="Delete">Delete</string>
    <string name="title_activity_view_schedule">ViewSchedule</string>
    <string name="title_activity_manage_schedule">ManageSchedule</string>
</resources>
